# talent-plan-rust

./: .gitignore
project-2/: Cargo.toml  compact.md  test
project-2/src/: db.rs  lib.rs
project-2/src/db/: common.rs  compacte_worker.rs  db_file.rs  db_index.rs  db_meta.rs  debug.rs  file_manager.rs  index.rs  lock_manager.rs  request_worker.rs  worker.rs
project-2/tests/: cli.rs
