[package]
name = "kvs"
version = "0.1.0"
authors = ["wangning <patchoulig@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "2.33.0"
failure = "0.1.5"
serde = '1.0'
serde_json = "1.0"
tempfile = "3.2.0"
log = "0.4.14"
stderrlog = "0.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
warp = "0.1"
rand = "0.8"
sled = "0.34"



[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

